tests/baselines/reference/genericGetter2.errors.txt
genericGetter2.ts(5,14): error TS2314: Generic type 'A<T>' requires 1 type argument(s).


==== genericGetter2.ts (1 errors) ====
    class A<T> { }
    
    class C<T> {
        data: A<T>;
        get x(): A {
                 ~
!!! error TS2314: Generic type 'A<T>' requires 1 type argument(s).
            return this.data;
        }
    }